--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "sweetalert2": "^9.17.1",
+    "sweetalert2-react-content": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
