--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-toastify": "^5.5.0",
     "styled-components": "^5.1.0",
-    "sweetalert2": "^9.17.1",
-    "sweetalert2-react-content": "^3.0.3"
+    "sweetalert2": "^9.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
